# cookiecutter-ds

./: .gitignore  CHANGELOG.md  README.md  cookiecutter.json  pyproject.toml
docs/API/: index.html  search.js  tasks.html
docs/API/hooks/: post_gen_project.html
docs/API/tasks/: devops.html  test.html
docs/htmls/: hooks.html  index.html  search.js
docs/htmls/tasks/: devops.html
docs/tasks/: devops.html
hooks/: post_gen_project.py
tasks/: __init__.py  devops.py  test.py
tests/: conftest.py  helpers.py  test_cookiecutter.py  test_post_gen_project.py
{{cookiecutter.repo_name}}/: .env  .template_gitignore  README.md  environment.yml  invoke.toml  pyproject.toml  requirements.txt
{{cookiecutter.repo_name}}/docs/analysis/: readme.md
{{cookiecutter.repo_name}}/docs/data/raw/: datasets_CHANGELOG.md
{{cookiecutter.repo_name}}/docs/modules/: model.md  module.md  readme.md
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/: settings.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/configs/: env.py
{{cookiecutter.repo_name}}/tasks/: __init__.py  checks.py  cleans.py  commits.py  devops.py  installs.py
