# https://python-poetry.org/docs/pyproject/

# PROJECT

[tool.poetry]
name = "{{cookiecutter.repository}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
repository = "https://github.com/{{cookiecutter.user}}/{{cookiecutter.repository}}"
documentation = "https://{{cookiecutter.user}}.github.io/{{cookiecutter.repository}}/"
authors = ["{{cookiecutter.user}}"]
readme = "README.md"
license = "{{cookiecutter.license}}"
packages = [{ include = "{{cookiecutter.package}}", from = "src" }]

# SCRIPTS

[tool.poetry.scripts]
{{cookiecutter.repository}} = "{{cookiecutter.package}}.scripts:main"

# DEPENDENCIES

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"
setuptools = "^71.1.0"
python-dotenv = "*"
{%- if cookiecutter.data_libraries == "Yes" %}
numpy = "*"
scipy = "*"
pandas = "*"
scikit-learn = "*"
statsmodels = "*"
pyarrow = "*"
vaex = "*"
matplotlib = "*"
seaborn = "*"
{%- endif %}



[tool.poetry.group.checks.dependencies]
mypy = "^1.10.1"
pytest = "^8.2.2"
ruff = "^0.5.0"

[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"

[tool.poetry.group.docs.dependencies]
pdoc = "^14.5.1"
interrogate = "^1.7.0"

[tool.poetry.group.notebooks.dependencies]
ipykernel = "^6.29.4"
nbformat = "^5.10.4"

# CONFIGURATIONS

[tool.mypy]
pretty = true
strict = true
python_version = "{{cookiecutter.python_version}}"
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--verbosity=2"
pythonpath = ["src"]

[tool.ruff]
fix = true
indent-width = 4
line-length = 100
target-version = "py{{cookiecutter.python_version.replace('.', '')}}"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D100", "D103"]

# SYSTEMS

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"